--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "HPGMG/hpgmg"]
 	path = HPGMG/hpgmg
 	url = https://bitbucket.org/hpgmg/hpgmg
+[submodule "HPCG/hpcg"]
+	path = HPCG/hpcg
+	url = https://github.com/hpcg-benchmark/hpcg.git
