added extreme solar texas benchmark.

--- a/Sienna-Ops/benchmarks/Project.toml
+++ b/Sienna-Ops/benchmarks/Project.toml
@@ -12,3 +12,6 @@ PowerNetworkMatrices = "bed98974-b02a-5e2f-9fe0-a103f5c450dd"
 PowerSimulations = "e690365d-45e2-57bb-ac84-44ba829e73c4"
 PowerSystemCaseBuilder = "f00506e0-b84f-492a-93c2-c0a9afc4364e"
 PowerSystems = "bcd98974-b02a-5e2f-9ee0-a103f5c450dd"
+StorageSystemsSimulations = "e2f1a126-19d0-4674-9252-42b2384f8e3c"
+TimeSeries = "9e3dc215-6440-5c97-bce1-76c03772f85e"
+Xpress = "9e70acf3-d6c9-5be6-b5bd-4e2c73e3e054"
